Add header markup

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# stash
+stash/
+
 # production
 /build
 
@@ -66,3 +69,6 @@ typings/
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Local Netlify folder
+.netlify
