--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "core-js": "^3.3.4",
-    "handlebars": "^4.5.3"
+    "gumshoejs": "^5.1.2",
+    "handlebars": "^4.5.3",
+    "smooth-scroll": "^16.1.0"
   }
 }
